header z-index fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ header{
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 999s;
+  z-index: 999;
   padding: 0 15px;
 }
 
